# DevOpsPipeline

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py  models.py
app/routers/: items.py
tests/: test_api.py
