[project]
name = "devops-pipeline-lab"
version = "1.0.0"
description = "Laboratorio de DevOps con FastAPI y GitHub Actions"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
]

ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]